# nl-mesh-platform

./: CLAUDE.md  INITIAL.md  PLANNING.md  PROJECT_README.md  README.md  README_zh.md  TASK.md  demo.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: create-plan.md  primer.md
PRPs/: nl_mesh_inspect_platform.md
nl_mesh_inspect/: __init__.py  agent.py  cli.py  langgraph_agent.py  llm_agent.py  llm_config.py  mock_llm.py  models.py  nlp_engine.py  prompts.py  tools.py
nl_mesh_inspect/api/: __init__.py  main.py
tests/: test_agent.py  test_llm_agent.py  test_models.py  test_nlp_engine.py
